fixed wallpaper issues

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-  background-image: url('http://booshtox.com/storage/cache/images/000/004/damask-black,large.1482093991.png'); background-repeat: repeat-x;
+  background-image: url('https://s-media-cache-ak0.pinimg.com/originals/f7/c4/30/f7c43039796b5f26e21cb748c7fd483a.jpg'); background-repeat: repeat;
 }
 
 
